latest post chages

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <!-- main contain area -->
       <main class="container main">
         <div class="main-content">
-          <h2>latest Post</h2>
+          <h2>Latest Post</h2>
           <hr />
           <article>
             <div class="art img">
@@ -212,17 +212,18 @@
                 width="100%"
                 alt=""
               />
-              <h3>Lorem ipsum dolor sit amet.</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
-                quam sunt architecto dolorum minima in consequuntur sed
-                accusantium, incidunt nostrum harum dolor molestias consequatur
-                eligendi quod pariatur eveniet saepe quibusdam
-              </p>
-              <button class="btn btn-card">Read more</button>
-              <i class="fa-thin fa-right"></i>
+              <div class="container">
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+                  quam sunt architecto dolorum minima in consequuntur sed
+                  accusantium, incidunt nostrum harum dolor molestias
+                  consequatur eligendi quod pariatur eveniet saepe quibusdam
+                </p>
+                <button class="btn btn-card">Read more</button>
+                <i class="fa-thin fa-right"></i>
+              </div>
             </div>
-
             <div class="card">
               <img
                 src="dave-weatherall-ZAwMMAoabrU-unsplash.jpg"
@@ -241,7 +242,6 @@
                 <i class="fa-thin fa-right"></i>
               </div>
             </div>
-
             <div class="card">
               <img
                 src="dave-weatherall-ZAwMMAoabrU-unsplash.jpg"
@@ -260,24 +260,6 @@
                 <i class="fa-thin fa-right"></i>
               </div>
             </div>
-
-            <div class="card">
-              <img
-                src="dave-weatherall-ZAwMMAoabrU-unsplash.jpg"
-                width="100%"
-                alt=""
-              />
-              <h3>Lorem ipsum dolor sit amet.</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
-                quam sunt architecto dolorum minima in consequuntur sed
-                accusantium, incidunt nostrum harum dolor molestias consequatur
-                eligendi quod pariatur eveniet saepe quibusdam
-              </p>
-              <button class="btn btn-card">Read more</button>
-              <i class="fa-thin fa-right"></i>
-            </div>
-
             <div class="card">
               <img
                 src="dave-weatherall-ZAwMMAoabrU-unsplash.jpg"
@@ -311,7 +293,7 @@
       </section>
 
       <!-- footer area -->
-      <footer class="footer">@c copy right all reserved</footer>
+      <footer class="footer">&copy; copy right all reserved</footer>
     </div>
   </body>
 </html>
